--- a/example/ios/.gitignore
+++ b/example/ios/.gitignore
@@ -18,12 +18,15 @@ Flutter/App.framework
 Flutter/Flutter.framework
 Flutter/Flutter.podspec
 Flutter/Generated.xcconfig
+Flutter/Debug.xcconfig
+Flutter/Release.xcconfig
 Flutter/app.flx
 Flutter/app.zip
 Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
+Podfile
 
 # Exceptions to above rules.
 !default.mode1v3
