--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,20 @@ version: 1.0.1
 homepage: https://github.com/fysoul17/google_maps_place_picker
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  google_maps_flutter: ^1.0.6
+  google_maps_flutter: ^2.0.1
   geolocator: ^6.0.0+4
   permission_handler: ^5.0.1+1
-  provider: ^4.0.1
+  provider: ^5.0.0
   google_api_headers: ">=0.1.0 <1.0.0"
-  google_maps_webservice: ^0.0.19
-  tuple: ^1.0.3
-  http: ^0.12.0+4
+  google_maps_webservice: ^0.0.20-nullsafety.0
+  tuple: ^2.0.0-nullsafety.0
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_test:
