--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
-  geolocator: ^6.0.0+4
-  permission_handler: ^5.1.0+2
+  location: ^4.0.0-nullsafety.0
   provider: ^5.0.0
   google_api_headers: ">=0.1.0 <1.0.0"
   google_maps_webservice: ^0.0.20-nullsafety.0
