--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_maps_place_picker
 description: A Flutter plugin which provides 'Picking Place' using Google Maps widget.
-version: 1.0.1
+version: 2.0.0-nullsafety
 homepage: https://github.com/fysoul17/google_maps_place_picker
 
 environment:
@@ -13,7 +13,7 @@ dependencies:
   google_maps_flutter: ^2.0.1
   location: ^4.0.0-nullsafety.0
   provider: ^5.0.0
-  google_api_headers: ">=0.1.0 <1.0.0"
+  google_api_headers: ^0.2.0-nullsafety.1
   google_maps_webservice: ^0.0.20-nullsafety.0
   tuple: ^2.0.0-nullsafety.0
   http: ^0.13.0
