Tune up config and code corrections

--- a/example/ios/.gitignore
+++ b/example/ios/.gitignore
@@ -17,9 +17,7 @@ xcuserdata
 Flutter/App.framework
 Flutter/Flutter.framework
 Flutter/Flutter.podspec
-Flutter/Generated.xcconfig
-Flutter/Debug.xcconfig
-Flutter/Release.xcconfig
+Flutter/*.xcconfig
 Flutter/app.flx
 Flutter/app.zip
 Flutter/flutter_assets/
