--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
-  location: ^4.0.0-nullsafety.0
+  location: 4.1.1
   provider: ^5.0.0
-  google_api_headers: ^0.2.0-nullsafety.1
-  google_maps_webservice: ^0.0.20-nullsafety.0
-  tuple: ^2.0.0-nullsafety.0
+  google_api_headers: 1.0.0
+  google_maps_webservice: ^0.0.20-nullsafety.2
+  tuple: 2.0.0
   http: ^0.13.0
 
 dev_dependencies:
